adicionei o efeito de scroll suave com smooth

--- a/memorial-avicii/style.css
+++ b/memorial-avicii/style.css
@@ -275,6 +275,10 @@ nav > div > a:hover {
      padding: 10px;
  }
 
+ html {
+    scroll-behavior: smooth;
+ }
+
  /* Instagram */
 
  .titulo-instagram {
